frontend: add odometer to portfolio positions
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -7,7 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-4 text-center">
             <span>24h Trade Volume</span>
-            <h5 class="display-6">{{fmtPriceFloat .TotalTradeVolume}}</h5>
+            <h5 class="display-6">${{fmtPriceFloat .TotalTradeVolume}}</h5>
         </div>
         <div class="col-4 text-center">
             <span>24h Trade Count</span>
@@ -36,7 +36,7 @@
                             {{.User.DisplayName}}</a>
                     </td>
                     <td class="text-center">
-                        {{fmtPrice .TotalPortfolioValue}}
+                        ${{fmtPrice .TotalPortfolioValue}}
                     </td>
                     {{ end }}
                 </tr>
