frontend: remove fractional part in trade volume
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -7,7 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-4 text-center">
             <span>24h Trade Volume</span>
-            <h5 class="display-6">${{fmtPriceFloat .TotalTradeVolume}}</h5>
+            <h5 class="display-6">${{comma .TotalTradeVolume}}</h5>
         </div>
         <div class="col-4 text-center">
             <span>24h Trade Count</span>
