frontend: reduce odometer.js usage
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/header.tmpl
+++ b/frontend/templates/header.tmpl
@@ -17,7 +17,7 @@
 
         a {
             text-decoration: none;
-            color: #b1bad6;
+            color: #d6e4a2;
         }
 
         a:hover {
