frontend: improve static page contents
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/frontend/templates/game.tmpl
+++ b/frontend/templates/game.tmpl
@@ -1,8 +1,8 @@
 {{- /*gotype: github.com/grpcoin/grpcoin/frontend.StaticPage */ -}}
-{{ template "header.tmpl" "gRPCOIN - Paper trading cryptocurrencies" }}
+{{ template "header.tmpl" "gRPCOIN - Game Rules" }}
 <div class="container">
     <h4 class="display-3 fw-lighter text-center">
-        Get started with gRPCOIN API
+        gRPCOIN Game Rules
     </h4>
     <article class="row justify-content-center">
         <div class="col-12 col-lg-6">{{.Content}}</div>
