--- a/frontend/templates/header.tmpl
+++ b/frontend/templates/header.tmpl
@@ -28,7 +28,6 @@
             background-color: #1A202C;
         }
 
-
         ::-webkit-scrollbar {
             width: 10px;
         }
@@ -42,6 +41,15 @@
             border-radius: 10px;
         }
 
+        code {
+            background-color: #b1b1b1;
+        }
+        pre code {
+            background-color: initial;
+        }
+        pre {
+            background-color: #394459;
+        }
 
         table > tbody > tr:nth-of-type(odd) {
             color: whitesmoke !important;
@@ -204,7 +212,10 @@
                 <a class="nav-link" href="/leaderboard">Leaderboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/join">Join via API</a>
+                <a class="nav-link" href="/join">How to Play</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/rules">Rules</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/grpcoin/grpcoin" target="_blank">Source</a>
