--- a/frontend/templates/home.tmpl
+++ b/frontend/templates/home.tmpl
@@ -79,7 +79,7 @@
         </div>
         <div class="col text-start">
             <a href="/join" class="btn btn-lg btn-primary">
-                Join via the API
+                Learn to play
             </a>
         </div>
     </div>
