Redirect to /leaderboard instead of /

--- a/frontend/templates/profile.tmpl
+++ b/frontend/templates/profile.tmpl
@@ -73,7 +73,7 @@
             </div>
 
             <div class="mt-3">
-                <a type="button" href="/" class="btn bg-color-black bg-hover btn-lg
+                <a type="button" href="/leaderboard" class="btn bg-color-black bg-hover btn-lg
                 d-none d-lg-block" style="width: 100%;">
                     &larr; Leaderboard
                 </a>
